# career-lexicon-builder

./: .env.production.example  .gitignore  ANALYSIS_INDEX.md  DEPLOYMENT.md  DETAILED_COVERAGE_REPORT.md  DOCKER_README.md  HANDOFF.md  HANDOFF_LLM_LEXICON_SYSTEM.md  HANDOFF_PHASE_2_IMPROVEMENTS.md  IMPLEMENTATION_ROADMAP.md  LICENSE  MIGRATING_TO_SKILLS.md  MVP_COMPLETE_HANDOFF.md  NEXT_STEPS.md  Next Claude Session  PHASES.md  QUICK-START.md  QUICKSTART.md  QUICKSTART_SOCRATIC_SKILLS.md  README.md  README_LLM_ANALYSIS.md  README_ORCHESTRATOR.md  SAMPLE_02_achievement_library.md  SAMPLE_03_narrative_patterns.md  SECURITY.md  SOCRATIC_SKILLS_SUMMARY.md  TEST_COVERAGE_ANALYSIS.md  TEST_PLAN.md  WEEK_1-2_COMPLETE_CHECKPOINT.md  WEEK_3-8_COMPLETE_CHECKPOINT.md  WRAPPER_HANDOFF.md  WRAPPER_SETUP.md  add_cover_letter_styles.py  append_document_references.py  convert_pages.sh  convert_pages_to_pdf.applescript  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  format_cv.py  (+13 more)
.github/: dependabot.yml  pull_request_template.md
Claude Conversations/: claude-conversation-2025-10-16-12b6dc70.md  claude-conversation-2025-10-16-1561d561.md  claude-conversation-2025-10-16-3fae8c3d.md  claude-conversation-2025-10-16-63785c0c.md  claude-conversation-2025-10-16-81359b2c.md  claude-conversation-2025-10-16-c83202a5.md  claude-conversation-2025-10-16-eb79eb15.md  claude-conversation-2025-10-16-ebe9710f.md  claude-conversation-2025-10-16-f27548e5.md  claude-conversation-2025-10-20-c6a29113.md  claude-conversation-2025-10-20-f15875f5.md  (+15 more)
DevArtifacts/: GREEN-PHASE-COMPLETE.md  (+16 more)
(+319 files in other folders)
