[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cv-formatting"
version = "0.1.0"
description = "CV style extraction and formatting tools"
requires-python = ">=3.8"
dependencies = [
    "python-docx",
    "beautifulsoup4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
packages = ["cv_formatting"]
